# parversion

./: .devenv.flake.nix  .env.example  .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  example_graph.json  provider.yaml  reference  run.sh  settings.toml  settings.toml.example  shell.nix
.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-2-link
js/: min.js
prompts/html/: basis_field.txt  basis_group.txt  basis_network.txt  basis_node.txt
prompts/xml/: classify.txt
schemas/: digest.json
src/: _context.rs  analysis.rs  ast.rs  basis_field.rs  basis_graph.rs  basis_group.rs  basis_network.rs  basis_node.rs  bloom_filter.rs  cache.rs  classification.rs  config.rs  constants.rs  content.rs  context.rs  context_group.rs  data_node.rs  document.rs  document_format.rs  document_node.rs  document_profile.rs  entrypoint.rs  environment.rs  error.rs  execution_context.rs  field_analysis.rs  function.rs  function_analysis.rs  graph_analysis.rs  graph_node.rs  group_analysis.rs  harvest.rs  hash.rs  id.rs  interface.rs  interface_type.rs  json_node.rs  json_schema.rs  lib.rs  lineage.rs  (+61 more)
src/_llm/: openai.rs
src/adapters/: chat.rs  curated_listing.rs  mod.rs
src/basis_node/: mod.rs
src/categorisers/: mod.rs
src/data/: llm_response_store
src/database/: mod.rs
src/document/: html.rs  json.rs  mod.rs
src/document_node/: json.rs  mod.rs  xml.rs
src/graph/: mod.rs
src/graph_node/: analysis.rs  debug.rs  mod.rs
src/llm/: anthropic.rs  categorization.rs  document.rs  groq.rs  mod.rs  network_analysis.rs  network_relationships.rs  node_analysis.rs  openai.rs  translation.rs
src/models/: chat.rs  curated_listing.rs  document_type.rs  list.rs  mod.rs  tree.rs
src/node/: debug.rs  interpretation.rs  mod.rs  traversal.rs  utility.rs
src/parsers/: chat.rs  curated_listing.rs  curated_listing_2.rs  list.rs  list_attempt_2.rs  mod.rs
src/prompts/: chat.rs  curated_listing.rs  document_types.rs  list.rs  mod.rs  salient_index.rs
src/provider/: mod.rs  sqlite.rs  yaml.rs
src/reasoner/: basis_field.rs  basis_group.rs  basis_network.rs  basis_node.rs  classify.rs  mod.rs  openrouter.rs
src/reasoner/backend/: mod.rs  openrouter.rs
src/transformers/: chat.rs  curated_listing.rs  list.rs  mod.rs
src/tree_node/: mod.rs
src/utilities/: html.rs  llm.rs  mod.rs  text.rs  xml.rs
src/vision/: ai.rs  mod.rs
src/xml_node/: mod.rs
transformations/: xml_transformations.default.rs
