[package]
name = "parversion"
version = "0.1.0"
edition = "2021"

[dependencies]
pandoculation = { git = "https://github.com/davidRoussov/pandoculation.git" }
log = "0.4"
simple-logging = "2.0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
atty = "0.2"
clap = "3.0.0-beta.5"
regex= "1.10.3"
sha2 = "0.10.8"
xmltree = "0.10.3"
sled = "0.34.7"
bincode = "1.3.3"
uuid = {version = "1.8.0", features = ["v4"]}
dot = "0.1.4"
pathetic = "0.3.0"
url = "2.5.2"
markup5ever = "0.12.1"
markup5ever_rcdom = "0.3.0"
html5ever = "0.27.0"
toml = "0.8.14"
lazy_static = "1.5.0"
futures = "0.3.30"
dotenv = "0.15.0"
fern = "0.7.0"
pyo3 = { version = "0.17", features = ["extension-module"] }
async-trait = "0.1.83"

[lib]
name = "parversion"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "parversion"
path = "src/main.rs"
