[package]
name = "parversion"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simple-logging = "2.0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
atty = "0.2"
clap = "3.0.0-beta.5"
regex= "1.10.3"
sha2 = "0.10.8"
xmltree = "0.10.3"
sled = "0.34.7"
bincode = "1.3.3"
uuid = {version = "1.8.0", features = ["v4"]}
dot = "0.1.4"
pathetic = "0.3.0"
url = "2.5.2"
markup5ever = "0.12.1"
markup5ever_rcdom = "0.3.0"
html5ever = "0.27.0"
toml = "0.8.14"
lazy_static = "1.5.0"
futures = "0.3.30"
dotenv = "0.15.0"
fern = "0.7.0"
async-trait = "0.1.83"
quick-js = "0.4.1"
serde_yaml = "0.9.34"
fantoccini = "0.21.3"
once_cell = "1.20.2"
hex = "0.4.3"
chrono = "0.4.41"

[lib]
name = "parversion"
path = "src/lib.rs"

[[bin]]
name = "parversion"
path = "src/main.rs"
