[package]
name = "parversion"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = { version = "0.4", features = ["static-curl"] }
log = "0.4"
simple-logging = "2.0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
atty = "0.2"
clap = "3.0.0-beta.5"
regex= "1.10.3"
sha2 = "0.10.8"
xmltree = "0.10.3"
sled = { version = "0.34.7", optional = true }
bincode = "1.3.3"
uuid = {version = "1.8.0", features = ["v4"]}
dot = "0.1.4"
pathetic = "0.3.0"
url = "2.5.2"
scraper = "0.22"
ego-tree = "0.10"
toml = "0.8.14"
lazy_static = "1.5.0"
futures = "0.3.30"
dotenv = "0.15.0"
fern = "0.7.0"
async-trait = "0.1.83"
quick-js = "0.4.1"
serde_yaml = { version = "0.9.34", optional = true }
fantoccini = "0.21.3"
once_cell = { version = "1.20.2", optional = true }
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde"]}
cfg-if = "1.0.4"
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
swc_common = { version = "=18.0.0", features = ["concurrent"] }
swc_ecma_parser = "=28.0.0"
swc_ecma_ast = "=19.0.0"
swc_ecma_visit = "=19.0.0"
swc_ecma_codegen = "=21.0.0"
swc_atoms = "=9.0.0"
openrouter-rs = "0.4.7"

[lib]
name = "parversion"
path = "src/lib.rs"

[[bin]]
name = "parversion"
path = "src/main.rs"

[features]
default = []
caching = ["dep:sled", "dep:once_cell"]
yaml-provider = ["dep:serde_yaml"]
sqlite-provider = ["dep:rusqlite"]
